--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Lumen
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
 
@@ -17,3 +17,4 @@ DB_PASSWORD=password
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+USER_API_BASE=https://seller-users.hrazy.com/
