--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,4 +18,7 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+     Header add Access-Control-Allow-Origin "*"
+        Header set Access-Control-Allow-Headers "*"
+        Header set Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
 </IfModule>
