--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "flipbox/lumen-generator": "^8.2",
         "guzzlehttp/guzzle": "^7.0",
         "laravel/lumen-framework": "^8.3.1",
         "laravel/tinker": "^2.6"
