connected to the product reviews

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
+
+
 APP_NAME=Lumen
-APP_ENV=local
-APP_KEY=
+APP_ENV=production
+APP_KEY=base64:Sn4KYB8K8u9/kRfc1/b/7JkZoIYjAn9lGh/qtw0sS2c=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL="https://hrazy.com"
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
@@ -11,10 +13,11 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=mr_products
-DB_USERNAME=root
-DB_PASSWORD=password
+DB_DATABASE=exzzdfbw_mr
+DB_USERNAME=exzzdfbw_mr-place
+DB_PASSWORD=9c_epSd.9(B0
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
-USER_API_BASE=https://seller-users.hrazy.com/
+SELLER_USER_API="https://seller-users.hrazy.com/"
+USER_API="https://tanjeeb.hrazy.com/"
