connected to the product reviews with user information

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-
-
 APP_NAME=Lumen
 APP_ENV=production
 APP_KEY=base64:Sn4KYB8K8u9/kRfc1/b/7JkZoIYjAn9lGh/qtw0sS2c=
@@ -21,3 +19,4 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SELLER_USER_API="https://seller-users.hrazy.com/"
 USER_API="https://tanjeeb.hrazy.com/"
+REVIEWS="https://reviews.hrazy.com/"
