--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.3|^8.0",
         "flipbox/lumen-generator": "^8.2",
         "guzzlehttp/guzzle": "^7.0",
+        "illuminate/redis": "^8",
         "laravel/lumen-framework": "^8.3.1",
         "laravel/tinker": "^2.6"
     },
