--- a/public/.htaccess
+++ b/public/.htaccess
@@ -20,5 +20,5 @@
     RewriteRule ^ index.php [L]
      Header add Access-Control-Allow-Origin "*"
         Header set Access-Control-Allow-Headers "*"
-        Header set Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
+        Header set Access-Control-Allow-Methods "PUT, GET, POST,PATCH, DELETE, OPTIONS"
 </IfModule>
